--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <button class="btn">See Services</button>
         </div>
         <div class="header__form">
-        <form action="appointment.php" method="POST">
+        <form action="https://formspree.io/f/xblzrloo" method="POST">
           <h4>Book Now</h4>
           <input type="text" name="first_name" placeholder="First Name" required />
           <input type="text" name="last_name" placeholder="Last Name" required />
